; ModuleID = '/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_channel.c_ngx_close_channel.c'
source_filename = "/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_channel.c_ngx_close_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"close() channel failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_close_channel(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @close(i32 %7)
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i32, i32* @NGX_LOG_ALERT, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @ngx_errno, align 4
  %14 = call i32 @ngx_log_error(i32 %11, i32* %12, i32 %13, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %10, %2
  %16 = load i32*, i32** %3, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @close(i32 %18)
  %20 = icmp eq i32 %19, -1
  br i1 %20, label %21, label %26

21:                                               ; preds = %15
  %22 = load i32, i32* @NGX_LOG_ALERT, align 4
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* @ngx_errno, align 4
  %25 = call i32 @ngx_log_error(i32 %22, i32* %23, i32 %24, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %26

26:                                               ; preds = %21, %15
  ret void
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @ngx_log_error(i32, i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
